# Store-mate-server

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 145fd585aabd_add_temp_admin_table.py  17eb89ea8670_update_category_and_product.py  7a4b72d1b2ad_update_correct_numeric.py  81bec74acab7_add_supplierphone_table.py  84c2d9d994db_remove_total_amount_in_purchases_table.py  955bb8ddf61e_update_admin_table_and_temp_admin_table.py  c618ffd9a00b_add_thumbnail_id_for_product.py  c7da9021d46c_update_purchase_and_product_table.py  db9bd5e95ebf_replace_stock_quantity_with_quantity.py  e9ff26a5bebd_remove_cascade_for_product.py  f524cfb8d174_update_supplier_table.py  fa2b7bc5804b_update_product_and_purchase.py  fb9c26cf28b7_initial_migration.py
src/: cloudinary_config.py  exception_handler.py  main.py  settings.py
src/db/: session.py
src/dependencies/: __init__.py  get_me.py
src/models/: __init__.py  admin.py  base.py  category.py  customer.py  order.py  order_product.py  product.py  purchase.py  purchase_product.py  supplier.py  temp_admin.py
src/response/: err_msg.py  exception_res.py  success_msg.py  success_res.py
src/routers/: admin.py  auth.py  category.py  product.py  purchase.py  supplier.py
src/schemas/: admin.py  auth.py  base.py  category.py  product.py  purchase.py  supplier.py
src/services/: admin.py  auth.py  base.py  category.py  product.py  purchase.py  supplier.py
src/utils/: __init__.py  convert_decimal.py  convert_to_dict_data.py  convert_update_data.py
src/validations/: __init__.py  decimal_validate.py  (+2 more)
